--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.14",
     "@reduxjs/toolkit": "^2.1.0",
     "antd": "^5.15.3",
+    "date-fns": "^3.6.0",
     "firebase": "^10.8.0",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
@@ -24,7 +25,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
