--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "socket.io": "^4.7.5"
   }
 }
